 #865 Add a pager for viewing output longer than one screen
#1092 Added option to display unique monsters in pale purple
#1119 Display burden in the inven term window, and show lbs remaining instead
      of percent capacity
#1140 Money is type squelchable through the squelch menu (= s o)
#1140 Add direction/distance to the visible item list ']'
r1971 Make summoning traps light blue
r1981 Coloured messages
r1999 Make ATTR_MULTI use the full range of colours
r2003 Add ATTR_FLICKER to make monsters shimmer in real time (optional!)
r2026 Allow quality squelching of DSM
      Added support for extended character sets ("xchars")
      Added support for expanded graphics tiles ("bigtile")
      Revised monster colours
      Added warning that -n switch will lose existing character unless -u is
used in conjunction with it
      Added Nomad's 8x16 tiles
      Various improvements and fixes to the GTK port

List of bugs fixed
==================
 #862 Fix inscription parsing in stores
 #938 Fix non-maximise mode
 #979 Prevent leakage of information about artifact flavours
#1058 Fix energy problems on game loading
#1071 Do not allow unIDd items to stack with identical IDd items in the object
      list 
#1075 Make -r option work properly again
#1106 The psychic warriors bug (mana displayed for warriors)
#1122 Fix a display bug with the number of dropped items in the home
#1123 Fix an update bug with the monster list subwindow
#1129 Fix shooting power display in stores
#1130 Prevent the casting of forgotten spells 
#1131 Fix squelch worthless so non-salable items are squelched, salable items
      are not squelched, and the object knowledge menu indicates worthless
      items which are squelched by the option with Yes*
#1133 Do not mark object flavors {tried} on device activation failure
#1138 Fix the cost and nutrition on Potions of *Healing*
#1139 Fix repeating actions from actions menu
#1140 Allow selling of Potions of Dragon Breath